# cap-alloc

./: pyproject.toml  run.py  simulation.ipynb
data/: into_the_block_data_2024.csv
src/: models.py  scoring.py  simulation.py  utils.py
